# football-telegram-bot

./: .gitignore  Dockerfile  Pipfile  README.md  collector.py  db_populator.py  docker-compose.yml  events_collector.py  football_notif_crontab  football_notifier.env  get_countries.py  insert_languages.py  notifier_bot.py  partial_db_updater.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
config/: config_utils.py  managed_teams.json  notif_config.py
dev_scripts/: collect_fixtures_events.sh  collect_line_ups.sh  initialize_database.sh  notify_daily_fl.sh  notify_daily_ft.sh  notify_daily_ft_stats.sh  notify_ft_game_approaching.sh  notify_ft_game_played.sh  notify_ft_team_game_played.sh  partial_db_updater.sh  partial_db_updater_post_midnight.sh  populate_database.sh  run_all_tests.sh  run_line_up_update_notifier.sh  run_next_match_notifier.sh  run_notifier.sh  run_played_match_notifier.sh  update_head_to_heads.sh
src/: db_populator.py  emojis.py  entities.py  notifier_bot.py  notifier_constants.py  partial_db_updater.py  player_statistics_manager.py  request.py  team_fixtures_manager.py
src/api/: base_client.py  fixtures_client.py  images_search_client.py  players_client.py  telegram_client.py  videos_search_client.py  youtube_search_client.py
src/collectors/: lineups_collector.py
src/converters/: converters.py
src/db/: db_manager.py  (+3 more)
tests/: conftest.py  test_date_utils.py  test_db_utils.py  test_fixture_entity.py  test_fixtures_utils.py  test_message_utils.py  test_notification_utils.py  test_partial_db_updater.py  test_players.py  test_stats.py
(+295 files in other folders)
