[tool.poetry]
name = "football-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Matias Cardenas <cardenasmatias.1990@gmail.com>"]
readme = "README.md"
packages = [{include = "football_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.1"
emoji = "^2.2.0"
httpx = "^0.23.3"
requests = "^2.28.2"
pytest = "^7.2.1"
isort = "^5.12.0"
black = "^23.1.0"
freezegun = "^1.2.2"
psycopg2 = "^2.9.5"
sqlmodel = "^0.0.8"
pytz = "^2022.7.1"
deep-translator = "^1.10.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
